--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     build: ./
     volumes:
-      - ./app:/app
+      - ./:/app
     ports:
       - "9000:9000"
       - "5678:5678"
