--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,6 @@ click==7.1.2
 dnspython==2.1.0
 email-validator==1.1.3
 fastapi==0.65.2
-graphene==2.1.8
-graphql-core==2.3.2
-graphql-relay==2.0.1
 greenlet==1.1.0
 h11==0.12.0
 httptools==0.1.2
@@ -36,3 +33,7 @@ uvicorn==0.13.4
 uvloop==0.15.2
 watchgod==0.7
 websockets==8.1
+beautifulsoup4==4.9.3
+bs4==0.0.1
+prettytable==2.1.0
+url-normalize==1.4.1
